Updates in v0.8.1
1. Types.CorrData.subset: clarified documentary of overwrite option. Default False.

=============================================================
Updates in v0.8.0
MONITORING:
1. get_dvv():drop negative error data

TYPES:
1. RawData: minor bug fix for attribute names.
2. Added CorrDataEnsemble() placeholder, to store a gather of CorrData from the same virtual source.
3. Fixed a bug when merging corrdata pairs with different channel types (when ignore_channel_type is True).
4. Fixed typos in CorrData.filter(), where highpass() was typed as lhighpass.
5. CorrData.merge(): fixed bugs when errors in joining two data matrices, the time attribute will still be merged, leading 
to inconsistent sizes.
6. DvvData: drop negative error data and added option to specify maximum error in plot().

NOISE:
1. merge_pairs(): fixed minor bugs. Removed try{} block in stack, split, egf, and saving steps. The try block would hide errors
that might be important to address.

DOWNLOADERS:
1. download(): use "PRESSURE" as output for pressure channel.

UTILS:
1. Change np.float to np.float32.
2. save2asdf(): fixed sta_in when it is a list.
=======
2. save2asdf: Fixed a bug when saving multiple traces with a list of station inventory.

DOWNLOADERS:
1. download(): changed pressure channel rmresp output to "PRESSURE", instead of hardcoding it to "VEL".

STACKING:
1. stack: discard NaN traces before passing the data to each method.
2. robust: fixed a bug when outlier traces have huge amplitudes, which would cause the dot product 
  and L2 norms too large to be handeled by the system. The final stack will be scaled back.
=================================================================
Updates in v0.7.7
TYPES:
1. CorrData.merge(): added option to ignore channel types. This is needed when stations update
  their channels types, e.g., EH? to BH?. This new option would allow station pairs with different
  channel types to merge. Default is False.

NOISE: